# CoordinateGui

./: .classpath  .gitignore  .gitmodules  .project  .travis.yml  README.md  WORKSPACE  appveyor.yml  azure-pipelines.yml  build.gradle  settings.gradle  shared_styleguide.gradle  widget_build.gradle
CoordinateGuiCore/src/main/java/org/snobot/coordinate_gui/model/: BUILD.bazel  Coordinate.java  DataProvider.java  DataProviderListener.java  Distance.java  FieldLoader.java  PixelConverter.java  Position2dDistance.java  Position2dPixels.java  Velocity.java
CoordinateGuiCore/src/main/java/org/snobot/coordinate_gui/ui/layers/: AprilTagController.java  BUILD.bazel  BaseGuiController.java  CameraRayLayerController.java  CoordinateLayerController.java  CreatePointsLayer.java  FieldImageLayer.java  FieldLayerController.java  GoToPositionController.java  ILayerManager.java  LayerManager.java  PurePursuitLayerController.java  RobotLayer.java  RobotPositionLayerController.java  TrajectoryConfigLayerController.java  WaypointLayerController.java
CoordinateGuiCore/src/main/java/org/snobot/coordinate_gui/ui/render_props/: BUILD.bazel  CoordinateLayerRenderProps.java  CreatePointsLayerRenderProps.java  MovementArrowLayerRenderProps.java
CoordinateGuiCore/src/test/java/org/snobot/coordinate_gui/model/: BUILD.bazel  PixelConverterTest.java
CoordinateGuiCore2017/src/main/java/org/snobot/coordinate_gui/game/steamworks/: BUILD.bazel  CoordinateGui2017.java  StandaloneMain.java
CoordinateGuiCore2019/src/main/java/org/snobot/coordinate_gui/game/deep_space/: BUILD.bazel  DeepSpaceController.java  StandaloneMain.java
CoordinateGuiCore2020/src/main/java/org/snobot/coordinate_gui/game/infinite_recharge/: BUILD.bazel  InfiniteRechargeController.java  StandaloneMain.java
CoordinateGuiCore2021/src/main/java/org/snobot/coordinate_gui/game/infinite_recharge_at_home/: BUILD.bazel  BarrelController.java  BarrelPathController.java  BouncPathController.java  BounceController.java  BouncePathController.java  GalacticSearchAController.java  GalacticSearchBController.java  InfiniteRechargeAtHomeController.java  RobotDims.java  SlalomController.java  SlalomPathController.java  StandaloneMain.java
CoordinateGuiStandalone/src/main/java/frc/robot/pure_pursuit/: BUILD.bazel  PurePursuitPathGenerator.java  PurePursuitWaypoint.java  Vector2D.java
CoordinateGuiWidget2019/src/main/java/org/snobot/coordinate_gui/shuffleboard/: BUILD.bazel  CoordinateGuiWidget.java  CoordinateGuiWidget2019.java  ShuffleboardPlugin2019.java
CoordinateGuiWidget2019/src/main/java/org/snobot/coordinate_gui/shuffleboard/data/: BUILD.bazel  CoordinateGuiData.java  CoordinateGuiDataType.java  DeepSpaceCoordinateGuiData.java  DeepSpaceCoordinateGuiDataType.java
CoordinateGuiWidget2019/src/main/java/org/snobot/coordinate_gui/shuffleboard/deep_space/: CoordinateGuiWidget2019.java  DeepSpaceCoordinateGuiWidget.java  ShuffleboardPlugin2019.java
CoordinateGuiWidget2020/src/main/java/org/snobot/coordinate_gui/shuffleboard/infinite_recharge/: BUILD.bazel  CoordinateGuiWidget2020.java  InfiniteRechargeCoordinateGuiWidget.java  ShuffleboardPlugin2020.java
CoordinateGuiWidget2021/src/main/java/org/snobot/coordinate_gui/shuffleboard/infinite_recharge_at_home/: BUILD.bazel  BarrelCoordinateGuiWidget.java  BarrelGuiWidget2021.java  BarrelPathGuiWidget2021.java  BounceCoordinateGuiWidget.java  BounceGuiWidget2021.java  BouncePathGuiWidget2021.java  GalacticSearchACoordinateGuiWidget.java  GalacticSearchAGuiWidget2021.java  GalacticSearchBCoordinateGuiWidget.java  GalacticSearchBGuiWidget2021.java  InfiniteRechargeAtHomeCoordinateGuiWidget.java  InfiniteRechargeAtHomeGuiWidget2021.java  InfiniteRechargeGuiWidget2021.java  ShuffleboardPlugin2021.java  SlalomCoordinateGuiWidget.java  SlalomGuiWidget2021.java  SlalomPathGuiWidget2021.java
CoordinateGuiWidgetCore/src/main/java/org/snobot/coordinate_gui/shuffleboard/: BUILD.bazel
CoordinateGuiWidgetCore/src/main/java/org/snobot/coordinate_gui/shuffleboard/data/: BaseCoordinateGuiData.java  CoordinateData.java  CoordinateDataType.java  GoToPositionData.java  GoToPositionDataType.java  PurePursuitData.java  PurePursuitDataType.java  RamseteControllerData.java  RamseteControllerDataType.java  SmartDashboardNames.java  TrajectoryData.java  TrajectoryDataType.java  VisionData.java  VisionDataType.java
CoordinateGuiWidgetCore/src/main/java/org/snobot/coordinate_gui/shuffleboard/widgets/: BaseCoordinateGuiWidget.java  IdealSplineSerializer.java  PurePursuitPlotsWidget.java  RamsetePlotsWidget.java  TrajectoryPlotsWidget.java
CoordinateGuiWidgetCore/src/test/java/org/snobot/coordinate_gui/shuffleboard/data/: BUILD.bazel  CoordinateDataTest.java  GoToPositionDataTest.java  PurePursuitDataTest.java  TrajectoryDataTest.java  VisionDataTest.java
PurePursuitPlotter/src/main/java/org/snobot/nt/pure_pursuit_plotter/: BUILD.bazel  PurePursuitPlotsController.java  PurePursuitPointInfo.java  StandalonePurePursuitMain.java
PurePursuitPlotter/src/main/java/org/snobot/nt/pure_pursuit_plotter/plots/: PurePursuitWheelGraphController.java  PurePursuitXYPositionGraphController.java
RamsetePlotter/src/main/java/org/snobot/nt/ramsete_plotter/: BUILD.bazel  RamseteInstantaneousPoint.java  RamsetePlotDeserializer.java  RamsetePlotsController.java  RamsetePointInfo.java  StandaloneRamseteMain.java
RamsetePlotter/src/main/java/org/snobot/nt/ramsete_plotter/plots/: RamseteHeadingGraphController.java  RamseteVelocityGraphController.java  RamseteXYPositionGraphController.java
TrajectoryPlotter/src/main/java/org/snobot/nt/spline_plotter/: BUILD.bazel  SplineSegment.java  StandaloneMain.java  TrajectoryGraphOverviewController.java  TrajectoryHeadingGraphController.java  TrajectoryPlotsController.java  TrajectoryWheelGraphController.java  TrajectoryXYPositionGraphController.java
TrajectoryPlotter/src/main/java/org/snobot/nt/spline_plotter/plot_groups/: TrajectoryPositionOverviewController.java
TrajectoryPlotter/src/main/java/org/snobot/nt/spline_plotter/plots/: TrajectoryErrorGraphController.java  (+3 more)
(+280 files in other folders)
