load("//build_scripts:java_rules.bzl", "coordinate_gui_binary", "coordinate_gui_library", "coordinate_gui_widget")

coordinate_gui_widget(
    name = "infinite_recharge_at_home",
    srcs = glob(
        ["*.java"],
    ),
    package="org.snobot.coordinate_gui.shuffleboard",
    visibility = ["//visibility:public"],
    deps = [
        "//CoordinateGuiWidgetCore/src/main/java/org/snobot/coordinate_gui/shuffleboard",
        "//CoordinateGuiWidget2019/src/main/java/org/snobot/coordinate_gui/shuffleboard/data",
        "//CoordinateGuiCore2019/src/main/java/org/snobot/coordinate_gui/game/deep_space",
        "//CoordinateGuiCore/src/main/java/org/snobot/coordinate_gui/model",
        "@maven//:com_google_guava_guava",
        "@__bazelrio_edu_wpi_first_shuffleboard_api//jar",
    ]
)