load("//build_scripts:java_rules.bzl", "coordinate_gui_binary", "coordinate_gui_library")

coordinate_gui_library(
    name = "ramsete_plotter",
    srcs = glob(["plots/*.java", "*.java"], exclude=["StandaloneRamseteMain.java"]),
    visibility = ["//visibility:public"],
    deps = [
#        "@__bazelrio_edu_wpi_first_shuffleboard_api//jar",
#        "//CoordinateGuiCore/src/main/java/org/snobot/coordinate_gui/model",
#        "//CoordinateGuiCore/src/main/java/org/snobot/coordinate_gui/ui/layers",
        "//build_scripts/libs:javafx_base",
        "//build_scripts/libs:javafx_fxml",
        "//build_scripts/libs:javafx_graphics",
        "//build_scripts/libs:javafx_controls",
#        "//build_scripts/libs:javafx_graphics",
        "//CoordinateGuiCore/src/main/java/org/snobot/coordinate_gui/model",
#        "//CoordinateGuiCore/src/main/java/org/snobot/coordinate_gui/ui/layers",
    ],
    resources = [
        "//RamsetePlotter/src/main/resources",]
)

coordinate_gui_binary(
    name = "StandaloneRamseteMain",
    srcs = ["StandaloneRamseteMain.java"],
    deps = [
        ":ramsete_plotter",
        "//build_scripts/libs:javafx_fxml",
        "//build_scripts/libs:javafx_graphics",
        "//CoordinateGuiCore/src/main/java/org/snobot/coordinate_gui/model",
    ],
)