load("//build_scripts:java_rules.bzl", "coordinate_gui_library")

coordinate_gui_library(
    name = "layers",
    srcs = glob(["*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        "//CoordinateGuiCore/src/main/java/org/snobot/coordinate_gui/model",
        "//CoordinateGuiCore/src/main/java/org/snobot/coordinate_gui/ui/render_props",
        #            "@maven_javafx//:org_openjfx_javafx_base",
        "//build_scripts/libs:javafx_base",
        "//build_scripts/libs:javafx_graphics",
        "//build_scripts/libs:javafx_fxml",
        "@maven//:org_apache_logging_log4j_log4j_api",
        "@maven//:org_apache_logging_log4j_log4j_core",
        #            "@maven_javafx//:org_openjfx_javafx_fxml",
        #            "@maven_javafx//:org_openjfx_javafx_graphics",
    ],
    resources = ["//CoordinateGuiCore/src/main/resources"]
)
