load("//build_scripts:java_rules.bzl", "coordinate_gui_binary", "coordinate_gui_library", "coordinate_gui_test")

coordinate_gui_test(
    name = "data",
    srcs = glob(["*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        "//CoordinateGuiWidgetCore/src/main/java/org/snobot/coordinate_gui/shuffleboard",
#        "//CoordinateGuiCore/src/main/java/org/snobot/coordinate_gui/model"
##        "@__bazelrio_edu_wpi_first_shuffleboard_api//jar",
##        "//CoordinateGuiCore/src/main/java/org/snobot/coordinate_gui/model",
##        "//CoordinateGuiCore/src/main/java/org/snobot/coordinate_gui/ui/layers",
#        "//build_scripts/libs:javafx_base",
#        "//build_scripts/libs:javafx_fxml",
#        "//build_scripts/libs:javafx_graphics",
#        "//build_scripts/libs:javafx_controls",
##        "//build_scripts/libs:javafx_graphics",
        "//CoordinateGuiCore/src/main/java/org/snobot/coordinate_gui/model",
        "//PurePursuitPlotter/src/main/java/org/snobot/nt/pure_pursuit_plotter",
        "//CoordinateGuiCore/src/main/java/org/snobot/coordinate_gui/ui/layers",
#        "//CoordinateGuiCore/src/main/java/org/snobot/coordinate_gui/ui/layers",
    ],
)
